--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "e2e:stripe": "node scripts/stripe-e2e/runner.mjs"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -71,7 +72,8 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.3",
     "vitest": "^3.2.4",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "stripe": "^14.21.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
