--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview",
-    "e2e:stripe": "node scripts/stripe-e2e/runner.mjs"
+    "e2e:stripe": "node scripts/stripe-e2e/runner.mjs",
+    "e2e:stripe:local": "node --env-file=.env.local scripts/stripe-e2e/runner.mjs"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -68,16 +69,17 @@
     "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
+    "stripe": "^14.21.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.3",
     "vitest": "^3.2.4",
-    "zod": "^3.23.8",
-    "stripe": "^14.21.0"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@tailwindcss/typography": "^0.5.15",
+    "@tanstack/react-query-devtools": "^5.90.2",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
