--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
+    "build:cache-bust": "vite build --force",
     "lint": "eslint .",
     "preview": "vite preview",
     "e2e:stripe": "node scripts/stripe-e2e/runner.mjs",
