Update marketplace visibility, add upgrade dialog, and refine bid request permissions
- Add marketplace visibility and image access for all users
- Implement UpgradeDialog component for plan upgrades
- Update bid request and buyer visibility to user-scoped
- Restrict bid request deletion to super admins
- Update dashboard navigation and marketplace components
- Add useBidRequestsForDashboard hook
- Update package dependencies

--- a/package.json
+++ b/package.json
@@ -54,9 +54,10 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "dotenv": "^17.2.3",
+    "embla-carousel": "^8.6.0",
     "embla-carousel-auto-scroll": "^8.6.0",
     "embla-carousel-autoplay": "^8.6.0",
-    "embla-carousel-react": "^8.3.0",
+    "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.2.4",
     "jsdom": "^24.0.0",
     "lucide-react": "^0.462.0",
