--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,13 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Temporary AI working files
+/docs-ai/
+*_ANALYSIS.md
+*_CONTEXT.md
+*_SUMMARY.md
+*_INVESTIGATION.md
+*_COMPLETE.md
+*_FIX.md
+*_DEBUG_GUIDE.md
